--- a/app/src/main/java/com/schedulemaster/app/view/LoginFrom.form
+++ b/app/src/main/java/com/schedulemaster/app/view/LoginFrom.form
@@ -82,7 +82,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="3cdf" class="javax.swing.JLabel">
+      <component id="3cdf" class="javax.swing.JLabel" binding="signupLabel">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
