--- a/app/src/main/java/com/schedulemaster/app/view/LoginFrom.form
+++ b/app/src/main/java/com/schedulemaster/app/view/LoginFrom.form
@@ -54,11 +54,6 @@
           </component>
         </children>
       </grid>
-      <vspacer id="20e8a">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <vspacer id="68952">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
@@ -87,9 +82,15 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <labelFor value="a66cb"/>
           <text resource-bundle="string" key="signup"/>
         </properties>
       </component>
+      <vspacer id="d86ff">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
