--- a/app/src/main/java/com/schedulemaster/app/view/MainFrame.form
+++ b/app/src/main/java/com/schedulemaster/app/view/MainFrame.form
@@ -57,8 +57,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="a5c3" binding="content" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="a5c3" binding="content" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
