--- a/app/src/main/java/com/schedulemaster/app/view/TimeTableForm.form
+++ b/app/src/main/java/com/schedulemaster/app/view/TimeTableForm.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="c69e4">
+      <scrollpane id="51f2d" binding="scrollPane">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -17,7 +17,9 @@
         <children>
           <component id="b15cc" class="javax.swing.JTable" binding="timeTable" custom-create="true">
             <constraints/>
-            <properties/>
+            <properties>
+              <minimumSize width="30" height="30"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
