--- a/app/src/main/java/com/schedulemaster/app/view/LectureTableForm.form
+++ b/app/src/main/java/com/schedulemaster/app/view/LectureTableForm.form
@@ -10,7 +10,9 @@
     <children>
       <scrollpane id="c0d3e" binding="scrollPane">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="250"/>
+          </grid>
         </constraints>
         <properties>
           <enabled value="true"/>
