--- a/app/src/main/java/com/schedulemaster/app/view/SearchDialog.form
+++ b/app/src/main/java/com/schedulemaster/app/view/SearchDialog.form
@@ -23,7 +23,9 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <border type="empty">
+          <size top="0" left="0" bottom="15" right="15"/>
+        </border>
         <children>
           <component id="2b126" class="javax.swing.JButton" binding="selectButton" default-binding="true">
             <constraints>
