--- a/app/src/main/java/com/schedulemaster/app/view/LectureGroupForm.form
+++ b/app/src/main/java/com/schedulemaster/app/view/LectureGroupForm.form
@@ -19,7 +19,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="3946a" binding="headerPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3946a" binding="headerPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -48,6 +48,14 @@
             </constraints>
             <properties>
               <text resource-bundle="string" key="search"/>
+            </properties>
+          </component>
+          <component id="bd7d0" class="javax.swing.JButton" binding="deleteButton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="string" key="delete_group"/>
             </properties>
           </component>
         </children>
