--- a/app/src/main/java/com/schedulemaster/app/view/content/LoginFrom.form
+++ b/app/src/main/java/com/schedulemaster/app/view/content/LoginFrom.form
@@ -112,7 +112,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="81e62" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="81e62" class="javax.swing.JComboBox" binding="localeComboBox" custom-create="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
